--- a/css/style.css
+++ b/css/style.css
@@ -113,3 +113,43 @@ blockquote + p {
     color: #000000;
     margin-top: 29px;
 }
+
+blockquote + p + h2 {
+    font-family: 'PT Sans Caption', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 34px;
+    color: #000000;
+    margin-top: 35px;
+}
+
+blockquote + p + h2 + p + h3 {
+    font-family: 'PT Sans Caption', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 30px;
+    color: #000000;
+    margin-top: 33px;
+}
+
+blockquote + p + h2 + p + h3 + p {
+    font-family: 'PT Sans', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 34px;
+    color: #000000;
+    margin-top: 7px;
+}
+
+blockquote + p + h2 + p + h3 + p + ul {
+    font-family: 'PT Sans', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 34px;
+    color: #000000;
+    margin-top: 29px;
+}
