--- a/css/style.css
+++ b/css/style.css
@@ -153,3 +153,56 @@ blockquote + p + h2 + p + h3 + p + ul {
     color: #000000;
     margin-top: 29px;
 }
+
+ul, li {
+    margin-top: 17px;
+}
+
+ul + p {
+    font-family: 'PT Sans', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 34px;
+    color: #000000;
+    margin-top: 29px;
+}
+
+ul + p + blockquote::before {
+    position: absolute;
+    content: '';
+    top: 3px;
+    left: -20px;
+    border-left: 3px solid #333333;
+    height: 238px;
+}
+
+ul + p + blockquote + h2 {
+    font-family: 'PT Sans Caption', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 32px;
+    line-height: 36px;
+    color: #000000;
+    margin-top: 43px;
+}
+
+ul + p + blockquote + h2 + h3 {
+    font-family: PT Sans Caption;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 34px;
+    color: #000000;
+    margin-top: 37px;
+}
+
+ul + p + blockquote + h2 + h3 + p{
+    font-family: PT Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 34px;
+    color: #000000;
+    margin-top: 7px;
+}
